# portfolio-ops

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-monitor.yml  pages.yml
config/: targets.example.json
data/: incidents.json  service-metrics.json  status-summary.md  uptime.csv
docs/: adding-targets.md  architecture.md  dashboard.md  incidents.md  operations.md  privacy.md  security.md
scripts/: generate_summary.py  monitor.py
site/: app.js  index.html  status.json  styles.css
src/portfolio_ops/: __init__.py  cli.py  config.py  dashboard.py  dns_check.py  github_issues.py  http_check.py  incidents.py  metrics.py  models.py  monitor.py  observability.py  security_headers.py  storage.py  summary.py  tls_check.py
tests/: test_config.py  test_duplicate_prevention.py  test_http_check.py  test_observability.py  test_reliability.py  test_storage.py  test_summary.py
